--- a/pneumonia-classification/.gitignore
+++ b/pneumonia-classification/.gitignore
@@ -38,3 +38,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Python virtual environment
+/api/venv/
+
+# Python cache files
+__pycache__/
+*.py[cod]
